<?xml version="1.0"?>
<package>
	<name>algrob_project</name>
	<version>1.0.0</version>
	<description>RERT for two-armed Da Vinci.</description>

	<maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
	<author email="tes77@case.edu">Tom Shkurti</author>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>None</license>

	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>Eigen</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>Eigen</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	</export>
</package>
